<resources>
    <string name="app_name">Astronomy</string>
    <string name="sunSunriseTimeLabel">Time:</string>
    <string name="sunCivilDawnTimeLabel">Time:</string>
    <string name="sunCivilDawnLabel">Civil dawn</string>
    <string name="time">Time:</string>
    <string name="sunSunriseLabel">Sunrise</string>
    <string name="azimuth">Azimuth:</string>
    <string name="sunSunset">Sunset</string>
    <string name="moonrise">Moonrise:</string>
    <string name="moondown">Moondown:</string>
    <string name="new_moon">New moon:</string>
    <string name="full_moon">Full moon:</string>
    <string name="moon_phase">Moon phase:</string>
    <string name="lunar_month_day">Lunar month day:</string>
    <string name="morning_time">Morning time:</string>
    <string name="current_time">Current time:</string>
    <string name="location">Location:</string>
    <string name="coordinates">Coordinates</string>
    <string name="temperature">Temperature:</string>
    <string name="pressure">Pressure:</string>
    <string name="description">Description</string>
    <string name="title_activity_favourite_location">FavouriteLocationActivity</string>
    <string name="favourite_locations">Favourite locations</string>
    <string name="new_location">New location</string>
    <string name="change">Change</string>
    <string name="check_new_location">Check new location</string>
</resources>
